BIGC-627: finished adapting changes after updating to latest version. Added trampoline to webpack build process. Added watch process for webpack. Deleted package-lock.json and changes gitignore to ignore package-lock.json

--- a/src/trampoline.html
+++ b/src/trampoline.html
@@ -3,11 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>-- redirect --</title>
-	<script language="JavaScript">
-
-
-
-	</script>
+	<script src="./trampoline.bundle.js"></script>
 </head>
 <body>
 
