--- a/src/trampoline.html
+++ b/src/trampoline.html
@@ -2,10 +2,39 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>-- redirect --</title>
+	<meta id="libshopgate" src="libshopgate"/>
+	<title>Redirecting to Webcheckout ...</title>
+	<script language="JavaScript">
+      // SGEvent placeholder needed early (in the page loading phase) in order for iOS app to work as we expect it to.
+      window.SGEvent = {
+        /**
+         * @param {string} eventName Name of the event.
+         * @param {Array} eventArguments Arguments to the event.
+         */
+        __call: function call(eventName, eventArguments) {
+          console.log(`${`# Received event ${eventName}`}$`);
+
+          var args = eventArguments;
+
+          if (!eventArguments || !Array.isArray(eventArguments)) {
+            args = [];
+          }
+
+          console.warn(`Received event ${eventName} is not processed`);
+        },
+
+        /**
+         * It is required for iOS app in order for SGEvent to be used.
+         * Additionally due to issue in android app page in in app browser gets changed.
+         * @returns {boolean}
+         */
+        isDocumentReady: function isDocumentReady() {
+          return true;
+        }
+      };
+	</script>
 	<script src="./trampoline.bundle.js"></script>
 </head>
 <body>
-
 </body>
 </html>
